--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.2
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
