--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   # web_socket_channel: ^3.0.1
   http: ^1.2.2
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
