--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   # web_socket_channel: ^3.0.1
   http: ^1.2.2
   logger: ^2.4.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
